# color-segmentation-example

./: .gitignore  CMakeLists.txt  README.md
include/: hsv_range.hpp
src/: hsv_range.cpp  main.cpp
